# KneafMod

./: .gitattributes  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  ENVELOPE.md  KNEAFMOD_OPTIMIZATION_STRATEGIES_DOCUMENTATION.md  LICENSE  MIGRATION_GUIDE.md  NEOFORGE_INTEGRATION_SUMMARY.md  PARALLEL_PROCESSING_IMPLEMENTATION.md  PERFORMANCE_BENCHMARKS.md  PerformanceTestRunner.java  README.md  StandaloneTestRunner.java  TestFloatBuffer.java  TestLibraryLoading.java  TestNativeOnly.java  TestSpecificNative.java  VectorTestRunner.java  benchmark.bat  benchmark.sh  build.gradle  build_final.txt  build_log.txt  build_output.txt  checkstyle.xml  gradle.properties  java.header  performance_evaluation_plan.md  run_optimization_test.bat  run_test.bat  settings.gradle  swap_index.properties  todo.md
rust/: Cargo.toml  README.md  build.rs  debug_allocation.rs  test_memory_pressure_basic.rs  test_memory_pressure_simple.rs  test_parallelism.rs
rust/benches/: batch_processing_benchmark.rs  performance_benchmarks.rs  simd_benchmark.rs  spatial_benchmark.rs  swap_performance_benchmark.rs
rust/config/: rustperf.toml
rust/examples/: memory_leak_detector_example.rs  swap_memory_integration.rs  swap_memory_simple.rs  swap_optimizations_demo.rs  swap_performance_monitoring.rs  zero_copy_benchmark.rs
rust/schemas/: block.fbs  entity.fbs  item.fbs  mob.fbs
rust/src/: aabb.rs  allocator.rs  arena.rs  arena_memory.rs  bindings.rs  cache_eviction.rs  cache_eviction_backup.rs  cache_eviction_fixed.rs  checksum_monitor.rs  chunk.rs  combat_system.rs  compression.rs  config.rs  dashboard.rs  database.rs  entity_framework.rs  entity_modulation.rs  entity_registry.rs  entity_renderer.rs  errors.rs  jni_async_bridge.rs  jni_batch.rs  jni_batch_processor.rs  jni_bridge.rs  jni_bridge_builder.rs  jni_call.rs  jni_converter_factory.rs  jni_errors.rs  jni_exports.rs  jni_raii.rs  jni_utils.rs  lib.rs  light_prop.rs  load_balancer.rs  logging.rs  macros.rs  memory_pool.rs  memory_pressure_config.rs  metric_aggregator.rs  metrics_collector.rs  (+34 more)
rust/src/batch/: mod.rs  types.rs
rust/src/batch_processing/: common.rs  factory.rs  mod.rs  tests.rs
rust/src/benchmarks/: performance_benchmark.rs
rust/src/binary/: conversions.rs  factory.rs  mod.rs  zero_copy.rs
rust/src/block/: bindings.rs  config.rs  processing.rs  types.rs
rust/src/common_entity/: factory.rs  types.rs
rust/src/compression/: mod.rs
rust/src/config/: java_integration.rs  mod.rs  performance_config.rs  runtime_validation.rs  zero_downtime_reload.rs
rust/src/entities/: mod.rs
rust/src/entities/block/: bindings.rs  config.rs  processing.rs  types.rs
rust/src/entities/common/: factory.rs  mod.rs  processing.rs  state_manager.rs  thread_safe_state_manager.rs  types.rs
rust/src/entities/entity/: bindings.rs  config.rs  processing.rs  types.rs
rust/src/entities/item/: bindings.rs  config.rs  mod.rs  processing.rs  types.rs
rust/src/entities/mob/: bindings.rs  concurrent_processing.rs  config.rs  mod.rs  processing.rs  types.rs
rust/src/entities/villager/: advanced_pathfinding.rs  bindings.rs  config.rs  mod.rs  pathfinding.rs  processing.rs  spatial.rs  types.rs
rust/src/entity/: bindings.rs  config.rs  mod.rs  processing.rs  types.rs
rust/src/errors/: base_errors.rs  enhanced_errors.rs  mod.rs
rust/src/flatbuffers/: block_generated.rs  conversions.rs  entity_generated.rs  item_generated.rs  mob_generated.rs  mod.rs
rust/src/flatbuffers/block/: block_generated.rs
rust/src/flatbuffers/entity/: entity_generated.rs
rust/src/flatbuffers/generated_archive/: README.md  block_dir_contents.txt  block_generated.rs  block_generated_full.rs  entity_dir_contents.txt  entity_generated.rs  entity_generated_full.rs  item_dir_contents.txt  item_generated_full.rs  (+2 more)
rust/src/integration/: final_integration.rs
rust/src/item/: bindings.rs  config.rs  mod.rs  processing.rs  types.rs
rust/src/jni/: converter_factory.rs  errors.rs  mod.rs  performance.rs  utils.rs
rust/src/logging/: structured_logger.rs
rust/src/memory/: allocator.rs  arena.rs  leak_detector.rs  mod.rs  pressure_config.rs  zero_copy.rs
rust/src/memory_pool/: atomic_state.rs  buffer_pool.rs  common.rs  enhanced_manager.rs  factory.rs  hierarchical.rs  lightweight.rs  mod.rs  object_pool.rs  slab_allocator.rs  specialized_pools.rs  swap.rs
rust/src/mob/: bindings.rs  config.rs  mod.rs  processing.rs  types.rs
rust/src/parallelism/: base.rs  executor_factory.rs  mod.rs  sequential.rs  work_stealing.rs
rust/src/performance/: auto_optimizer.rs  checksum_monitor.rs  common.rs  mod.rs  monitor_builder.rs  monitoring.rs  real_time_monitor.rs
rust/src/performance_monitoring/: monitor_builder.rs
rust/src/recovery/: internal_recovery.rs
rust/src/shared/: mod.rs  thread_safe_data.rs
rust/src/simd/: base.rs  enhanced.rs  mod.rs  standardized.rs  vector_ops.rs
rust/src/spatial/: base.rs  mod.rs  optimized.rs
rust/src/state_manager/: entity_state.rs  mod.rs  thread_safe_state_manager.rs
rust/src/storage/: chunk.rs  database.rs  mod.rs
rust/src/sync/: mod.rs  thread_safe_sync.rs
rust/src/tests/: integration_tests.rs  mod.rs  parallel_astar_tests.rs  unit_tests.rs
rust/src/valence_integration/: app.rs  components.rs  config.rs  events.rs  mod.rs  resources.rs  spatial.rs  systems.rs
rust/src/villager/: bindings.rs  config.rs  mod.rs  pathfinding.rs  processing.rs  spatial.rs  types.rs
rust/tests/: binary_roundtrip.rs  cache_concurrency_test.rs  cache_deadlock_test.rs  chunk_management.rs  database_deadlock_test.rs  ecs_integration.rs  entity_registry_tests.rs  jni_zero_copy_performance_test.rs  memory_pool_exhaustion_prevention_test.rs  memory_pool_exhaustion_test.rs  memory_pressure_config_consistency_test.rs  monitoring_thread_test.rs  pathfinding_tests.rs  quick_checks.rs  simd_operations.rs  spatial_partitioning.rs  swap_memory_pool_tests.rs  swap_performance_stability_test.rs  test_allocator_fix.rs  test_atomic_simple.rs  test_database_deadlock_simple.rs  test_memory_leak_fix.rs  test_memory_pool_fix.rs  tests_binary_roundtrip.rs
(+685 files in other folders)
