[package]
name = "rustperf"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust library for JNI integration with Minecraft mods"
homepage = "https://github.com/kneafmod/rustperf"
repository = "https://github.com/kneafmod/rustperf"
license = "MIT OR Apache-2.0"
keywords = ["rust", "jni", "minecraft", "performance", "native"]
categories = ["external-ffi-bindings", "game-development", "multimedia::graphics"]

[lib]
name = "rustperf"
crate-type = ["cdylib", "rlib"]

# Windows-specific linker flags are handled by the build system externally.
# Per-target `crate-type` and `rustflags` in this manifest caused warnings and
# have been removed to keep the build clean.

[dependencies]
j4rs = "0.17"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
serde_json = "1.0"
jni = "0.21"
lazy_static = "1.4"
sysinfo = "0.30"
rayon = "1.8"
bevy_reflect = "0.14"
bevy_ecs = "0.14"
glam = { version = "0.27", features = ["serde"] }
nalgebra = "0.32"
ndarray = "0.15"
memmap2 = "0.5"
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "5.5"
blake3 = "1.3"
log = "0.4"
env_logger = "0.10"
sled = "0.34"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
fastrand = "2.0"
rand = "0.8"
byteorder = "1.4"
fastnbt = "2.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util", "sync"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["full"] }
crossbeam-utils = "0.8"
libc = "0.2"
flate2 = "1.0"
lz4_flex = "0.11"
crc32fast = "1.3"
parking_lot = "0.12"
crossbeam-epoch = "0.9"
crossbeam-queue = "0.3"
jemalloc-sys = { version = "0.5", optional = true }
jemallocator = { version = "0.5", optional = true }
thiserror = "1.0"
ctor = "0.2"
async-trait = "0.1"
schemars = "0.8"
flume = "0.11"
crossbeam-deque = "0.8.6"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies for JNI and native performance
winapi = { version = "0.3", features = ["std", "winbase", "winnt", "libloaderapi"] }
kernel32-sys = "0.2"
ws2_32-sys = "0.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
mimalloc = "0.1"
jemalloc-sys = { version = "0.5", optional = true }
jemallocator = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

[package.metadata]
# Build configuration for Gradle integration
gradle = { output_dir = "target/release", windows_dll_name = "rustperf.dll" }

## There is no loader binary or broken example in this workspace; example entry
## was removed to keep the manifest consistent with the source tree and avoid
## build/test failures when the example source is not present.
