[package]
name = "rustperf"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust library for JNI integration with Minecraft mods - Multi-core optimized"
homepage = "https://github.com/kneafmod/rustperf"
repository = "https://github.com/kneafmod/rustperf"
license = "MIT OR Apache-2.0"
keywords = ["rust", "jni", "minecraft", "performance", "native", "parallel", "simd", "multicore"]
categories = ["external-ffi-bindings", "game-development", "concurrency", "algorithms"]

[lib]
name = "rustperf"
crate-type = ["cdylib", "rlib"]

# Windows-specific linker flags are handled by the build system externally.
# Per-target `crate-type` and `rustflags` in this manifest caused warnings and
# have been removed to keep the build clean.

[dependencies]
# Core dependencies
j4rs = "0.17"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
serde_json = "1.0"
jni = "0.21"
lazy_static = "1.4"
sysinfo = "0.30"
rayon = "1.8"
glam = { version = "0.29", features = ["serde"] }
nalgebra = { version = "0.33", features = ["serde"] }
faer = { version = "0.20", features = ["std", "rayon"] }
ndarray = "0.15"
memmap2 = "0.5"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-epoch = "0.9"
dashmap = "5.5"
blake3 = "1.3"
log = "0.4"
env_logger = "0.10"
sled = "0.34"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
fastrand = "2.0"
rand = "0.8"
byteorder = "1.4"
fastnbt = "2.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util", "sync"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["full"] }
crossbeam-utils = "0.8"
libc = "0.2"
flate2 = "1.0"
lz4_flex = "0.11"
crc32fast = "1.3"
parking_lot = "0.12"
crossbeam-queue = "0.3"
jemalloc-sys = { version = "0.5", optional = true }
jemallocator = { version = "0.5", optional = true }
thiserror = "1.0"
ctor = "0.2"
async-trait = "0.1"
schemars = "0.8"
flume = "0.11"
crossbeam-deque = "0.8.6"
uuid = { version = "1.0", features = ["v4"] }
page_size = "0.6"  # Memory page size detection

# Multi-core optimization dependencies
threadpool = "1.8"
cpu-monitor = "0.1"  # CPU usage monitoring
affinity = "0.1"  # Thread affinity management

# SIMD optimization dependencies
wide = "0.7"  # SIMD wrapper library
simdeez = "2.0"  # SIMD ease-of-use library
# SIMD operations now use std::simd (built-in)

# Memory management dependencies
bumpalo = "3.15"  # Bump allocator

# High-performance data structures
im = "15.1"  # Immutable data structures
rpds = "0.13"  # Persistent data structures
sucds = "0.8"  # Succinct data structures

# Cache optimization dependencies
cache-size = "0.2"  # Cache size detection

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies for JNI and native performance
winapi = { version = "0.3", features = ["std", "winbase", "winnt", "libloaderapi"] }
kernel32-sys = "0.2"
ws2_32-sys = "0.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
mimalloc = "0.1"
jemalloc-sys = { version = "0.5", optional = true }
jemallocator = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
proptest = "1.4"  # Property-based testing
quickcheck = "1.0"  # QuickCheck testing
mockall = "0.12"  # Mocking framework

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

[package.metadata]
# Build configuration for Gradle integration
gradle = { output_dir = "target/release", windows_dll_name = "rustperf.dll" }

## There is no loader binary or broken example in this workspace; example entry
## was removed to keep the manifest consistent with the source tree and avoid
## build/test failures when the example source is not present.
